test/langtools/tools/javac/patterns/declarations/FinishingNormally.out
FinishingNormally.java:7:55: compiler.err.missing.match.stmt
- compiler.note.preview.filename: FinishingNormally.java, DEFAULT
- compiler.note.preview.recompile
1 error