test/langtools/tools/javac/patterns/declarations/FinishingNormally.java
/**
 * @test
 * @enablePreview
 * @compile/fail/ref=FinishingNormally.out -XDrawDiagnostics FinishingNormally.java
 */
public class FinishingNormally {
    public pattern FinishingNormally(String content) {}
}